# lorislib

./: .gitignore  Algorithm.md  Cargo.toml  README.md  Replacement Rules.md  notes.md
doc/: Algorithm.md  AlgorithmM.md  Evaluation.adoc  Glossary.md  Solved Equations.md  TransformationRules.md
lib/: preamble.m  preamble2.m
lib/Std/: Definitions.m  Differentiation.m  Display.m  Integration.m  Simplification.m  Std.m  lisp.m
lib/Std/functions/: arithmetic.m  atoms.m  boolean.m  calculus.m  combinatorics.m  comparison.m  equationdata.m  expression.m  flowcontrol.m  functional.m  init.m  list.m  manip.m  matrix.m  numbertheory.m  pattern.m  plot.m  power.m  random.m  replacement.m  simplify.m  solve.m  sort.m  specialsyms.m  stats.m  string.m  system.m  tests.m  time.m  trig.m
lib/System/: Simplification.m  System.m
resources/: built_ins.json  operators.csv  preamble.m
src/: abstractions.rs  atom.rs  attributes.rs  builtins.rs  context.rs  evaluate.rs  expression.rs  format.rs  formatter.rs  interner.rs  lexer.rs  lib.rs  logging.rs  normal_form.rs  operator.rs  operators.csv  parser.rs  parser_old.rs
src/atoms/: function.rs  integer.rs  literal.rs  mod.rs  real.rs  sequence.rs  sequence_variable.rs  string_literal.rs  symbol.rs  variable.rs
src/built_ins/: boolean.rs  context.rs  control_flow.rs  expressions.rs  mod.rs  numeric.rs
src/matching/: README.md  Replacement Rules.md  associative.rs  associative_commutative.rs  common.rs  commutative.rs  decomposition.rs  destructure.rs  free_functions.rs  function_application.rs  match_generator.rs  match_state.rs  matcher.rs  mod.rs  substitutions.rs
src/matching/abstract_matcher/: mod.rs  solved_equation.rs
src/matching/permutation_generator/: mod.rs
src/matching/permutation_generator/permutation_generator/: mod.rs
src/parsing/: lexer.rs  mod.rs  operator.rs  parser.rs
