[package]
name        = "lemur"
authors     = ["Robert Jacobson <rljacobson@gmail.com>"]
version     = "0.1.0"
edition     = "2021"
description = "A pattern matching engine that supports commutative and associative theories."
categories  = ["algorithms", "compilers", "parsing", "mathematics"]
keywords    = ["computer algebra", "Mathematica", "pattern matching", "term rewriting"]
homepage    = "http://www.github.com/rljacobson/lemur"
repository  = "http://www.github.com/rljacobson/lemur"
license     = "BSD"


publish = false


[dependencies]
permutation-generator = {path = "../permutation_generator"}

strum        = {version = "0.23", features = ["derive"]}
strum_macros = "0.23"
lazy_static  = "1.4.0"
smallvec     = {version = "1.8.0", features = ["union"]}
nom          = {version = "7", optional = true , features = ["alloc"]}
unicode-xid  = "0.2.2" # Unicode support for identifiers.


[features]
default = ["strict-associativity", "nom"]

strict-associativity     = []
mathematica-compatibiity = []
