[package]
name        = "loris"
authors     = ["Robert Jacobson <rljacobson@gmail.com>"]
version     = "0.1.0"
edition     = "2021"
description = "A pattern matching engine that supports commutative and associative theories."
categories  = ["algorithms", "compilers", "parsing", "mathematics"]
keywords    = ["computer algebra", "Mathematica", "pattern matching", "term rewriting"]
homepage    = "http://www.github.com/rljacobson/lemur"
repository  = "http://www.github.com/rljacobson/lemur"
license     = "BSD"


publish = false


[dependencies]
permutation-generator = {path = "../permutation_generator"}

strum        = {version = "0.23", features = ["derive"]}
strum_macros = "0.23"   # Generates variant name  only enum.
lazy_static  = "1.4.0"
# Vecs on the stack in the matcher
smallvec     = {version = "1.8.0", features = ["union"]}
# Strings On the stack in the lexer/parser.
#inlinable_string = "0.1.15"
unicode-xid      = "0.2.2"  # Unicode support for identifiers.
logos            = "0.12.1" # Scanner generator
yansi            = "0.5.1"  # ANSI color support.
fnv              = "1.0.7"  # FNV-1a hash.
csv              = "1.1"    # Reading operators from a CSV file

[features]
default = ["strict-associativity"]

strict-associativity     = []
mathematica-compatibiity = []
